--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -17,7 +17,12 @@
     /* Linting */
     "strict": true
   },
-  "include": ["src/index.ts", "src/components/**/*", "src/types/**/*", "src/style.d.ts"],
+  "include": [
+    "src/index.ts",
+    "src/components/**/*",
+    "src/types/**/*",
+    "src/style.d.ts"
+  ],
   "exclude": [
     "src/App.tsx",
     "src/main.tsx",
