feat: Update button variants and add outline styles
- Changed primary variant to sky color with hover/active states
- Updated secondary to outline sky style
- Added new danger-outline variant
- Restored hover/active states for solid variants
- Updated documentation and examples
- Added intelligent class merging with tailwind-merge

--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -21,6 +21,7 @@
     "src/index.ts",
     "src/components/**/*",
     "src/types/**/*",
+    "src/utils/**/*",
     "src/style.d.ts"
   ],
   "exclude": [
